--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
 body, html {
   padding: 0;
   margin: 0;
-  touch-action: none;
-  -ms-touch-action: none;
+  /* touch-action: none;
+  -ms-touch-action: none; */
   touch-action: pan-y;
 }
 body {
