--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
   font-style: normal;
   font-display: swap
 }
-
+::-webkit-scrollbar {
+  width: 0;
+}
 body, html {
   padding: 0;
-  margin: 0;
-  /* touch-action: none;
-  -ms-touch-action: none; */
-  touch-action: pan-y;
+  margin: 0; 
+  touch-action: pan-y;  
 }
 body {
   background: #04080F;
