--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@
   font-style: normal;
   font-display: swap
 }
-::-webkit-scrollbar {
-  width: 0;
-}
+
 body, html {
   padding: 0;
   margin: 0; 
   touch-action: pan-y;  
+  position: relative;
+  max-width: 100%; 
+  overflow-x: hidden; 
 }
 body {
   background: #04080F;
